--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "classnames": "^2.3.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "html-react-parser": "^4.0.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rss-parser": "^3.13.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
