--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,9 @@
 {
+  "version": "0.2.0",
   "configurations": [
     {
-      "command": "npm run dev",
-      "name": "dev",
+      "command": "./node_modules/.bin/astro dev",
+      "name": "Development server",
       "request": "launch",
       "type": "node-terminal"
     }
