--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
     "@astrojs/react": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
-    "@astrojs/vercel": "^4.0.0",
+    "@astrojs/vercel": "^4.0.3",
     "@fontsource/lato": "^5.0.11",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/react-dom": "^18.2.7",
-    "@types/react": "^18.2.21",
-    "astro": "^3.0.3",
+    "astro": "^3.0.7",
     "classnames": "^2.3.2",
-    "html-react-parser": "^4.2.1",
-    "react-dom": "^18.2.0",
+    "html-react-parser": "^4.2.2",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-type-animation": "^3.1.0",
     "rss-parser": "^3.13.0",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7"
   }
 }
