--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "astro": "^3.0.7",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.16.2",
     "html-react-parser": "^4.2.2",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^3.1.0",
+    "react": "^18.2.0",
     "rss-parser": "^3.13.0",
     "tailwindcss": "^3.3.3"
   },
