fixed tailwind v4 integration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dgtech",
   "homepage": "https://doruk.gezici.me",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,27 +12,27 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.1.2",
+    "@astrojs/react": "^4.1.6",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
-    "@astrojs/vercel": "^8.0.1",
+    "@astrojs/vercel": "^8.0.4",
     "@fontsource/lato": "^5.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "astro": "^5.1.2",
+    "astro": "^5.1.9",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^12.0.5",
     "html-react-parser": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-type-animation": "^3.2.0",
     "rss-parser": "^3.13.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2"
+    "@tailwindcss/vite": "^4.0.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   }
 }
