Updated dependencies & info

--- a/package.json
+++ b/package.json
@@ -12,28 +12,33 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.1.6",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "^8.0.4",
-    "@fontsource/lato": "^5.1.1",
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/vercel": "^8.2.11",
+    "@fontsource/lato": "^5.2.7",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@vercel/analytics": "^1.4.1",
-    "astro": "^5.1.9",
+    "@fortawesome/react-fontawesome": "^0.2.6",
+    "@vercel/analytics": "^1.6.1",
+    "astro": "^5.16.4",
     "classnames": "^2.5.1",
-    "framer-motion": "^12.0.5",
-    "html-react-parser": "^5.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^12.23.25",
+    "html-react-parser": "^5.2.10",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-type-animation": "^3.2.0",
     "rss-parser": "^3.13.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3"
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3"
+  },
+  "prettier": {
+    "semi": false,
+    "printWidth": 120,
+    "tabWidth": 2
   }
 }
